--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="sass/style.css">
   <script src="js/main.js" defer></script>
 </head>
 
@@ -21,7 +21,7 @@
     <header class="header">
       <a href="#" class="logo">
         <img class="logo__img" src="img/logo.svg" alt="Banco">
-        Cerveza
+        
       </a>
 
       <nav class="menu">
@@ -30,7 +30,7 @@
           <li class="menu-list__item"><a href="#">Caracteristicas</a></li>
           <li class="menu-list__item"><a href="#">Precio</a></li>
           <li class="menu-list__item"><a href="#">Contacto</a></li>
-          <li class="menu-list__item"><a class="catalogue" href="#">Catalogo</a></li>
+          <li class="menu-list__item"><a class="catalogue" href="#">Más información</a></li>
         </ul>
       </nav>
     </header>
@@ -39,25 +39,25 @@
     <article class="content">
       <a class="slideButton prevSlide"><i class="fa fa-left-long"></i></a>
       <a class="slideButton nextSlide"><i class="fa fa-right-long"></i></a>
-      <h1 class="content__claim">Tú Cerveza</h1>
-      <h2 class="content__subclaim">Visit Nuestra Tienda</h2>
-      <a class="catalogue" href="#">Catalogo</a>
+      <h1 class="content__claim">Tú Banco</h1>
+      <h2 class="content__subclaim">Visita Nuestra Sucursal Virtual</h2>
+      <a class="catalogue" href="#">Más información</a>
     </article>
 
     <!-- Footer -->
     <div class="footer-wrapper">
       <footer class="footer">
         <section class="footer__widget">
-          <h3 class="footer__widget__title">Our Location</h3>
-          <p class="footer__widget__text">15 Street Suburb Country 6000</p>
+          <h3 class="footer__widget__title">Dirección</h3>
+          <p class="footer__widget__text">Sinfonia 100, Santiago Región Metropolitana</p>
         </section>
         <section class="footer__widget">
-          <h3 class="footer__widget__title">Phone</h3>
-          <p class="footer__widget__text">+61 040 400 4000</p>
+          <h3 class="footer__widget__title">Telefono</h3>
+          <p class="footer__widget__text">+56 962 343 519  </p>
         </section>
         <section class="footer__widget">
           <h3 class="footer__widget__title">Email</h3>
-          <p class="footer__widget__text">automotive@carsales.com.au</p>
+          <p class="footer__widget__text">gpalmale89@gmail.com</p>
         </section>
       </footer>
     </div>
