--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
           <li class="menu-list__item"><a href="#">Caracteristicas</a></li>
           <li class="menu-list__item"><a href="#">Precio</a></li>
           <li class="menu-list__item"><a href="#">Contacto</a></li>
-          <li class="menu-list__item"><a class="catalogue" href="#">Más información</a></li>
+          <li class="menu-list__item"><a class="catalogue" href="store.html">Más información</a></li>
         </ul>
       </nav>
     </header>
@@ -41,7 +41,7 @@
       <a class="slideButton nextSlide"><i class="fa fa-right-long"></i></a>
       <h1 class="content__claim">Tú Banco</h1>
       <h2 class="content__subclaim">Visita Nuestra Sucursal Virtual</h2>
-      <a class="catalogue" href="#">Más información</a>
+      <a class="catalogue" href="store.html">Más información</a>
     </article>
 
     <!-- Footer -->
