--- a/main.html
+++ b/main.html
@@ -27,8 +27,8 @@
       <nav class="menu">
         <ul class="menu-list">
           <li class="menu-list__item"><a href="#">Home</a></li>
-          <li class="menu-list__item"><a href="#">Caracteristicas</a></li>
-          <li class="menu-list__item"><a href="#">Precio</a></li>
+          <li class="menu-list__item"><a href="#">Inversiones</a></li>
+          <li class="menu-list__item"><a href="conversor.html">Conversor</a></li>
           <li class="menu-list__item"><a href="#">Contacto</a></li>
           <li class="menu-list__item"><a class="catalogue" href="store.html">Más información</a></li>
         </ul>
