--- a/store.html
+++ b/store.html
@@ -7,12 +7,12 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Tienda</title>
+		<title>Productos</title>
 		<link rel="stylesheet" href="sass/style.css" />
 	</head>
-	<body>
-		<header class="store">
-			<h1>Tienda</h1>
+	<body class="store">
+		<header >
+			<h1>Productos</h1>
 
 			<div class="container-icon">
 				<div class="container-cart-icon">
