--- a/Inversiones.html
+++ b/Inversiones.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Automotive</title>
+  <title>Banco</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -19,14 +19,14 @@
   <main class="container">
     <!-- Header -->
     <header class="header">
-      <a href="#" class="logo">
+      <a href="main.html" class="logo">
         <img class="logo__img" src="img/logo.svg" alt="Banco">
         
       </a>
 
       <nav class="menu">
         <ul class="menu-list">
-          <li class="menu-list__item"><a href="#">Home</a></li>
+          <li class="menu-list__item"><a href="main.html">Home</a></li>
           <li class="menu-list__item"><a href="#">Inversiones</a></li>
           <li class="menu-list__item"><a href="conversor.html">Conversor</a></li>
           <li class="menu-list__item"><a href="#">Contacto</a></li>
