--- a/store.html
+++ b/store.html
@@ -19,14 +19,14 @@
   <main class="container">
     <!-- Header -->
     <header class="header">
-      <a href="#" class="logo">
+      <a href="main.html" class="logo">
         <img class="logo__img" src="img/logo.svg" alt="Banco">
         
       </a>
 
       <nav class="menu">
         <ul class="menu-list">
-          <li class="menu-list__item"><a href="#">Home</a></li>
+          <li class="menu-list__item"><a href="main.html">Home</a></li>
           <li class="menu-list__item"><a href="#">Inversiones</a></li>
           <li class="menu-list__item"><a href="conversor.html">Conversor</a></li>
           <li class="menu-list__item"><a href="#">Contacto</a></li>
